--- a/parallax-template/css/style.css
+++ b/parallax-template/css/style.css
@@ -55,3 +55,14 @@ p {
 footer.page-footer {
   margin: 0;
 }
+
+.cardContainer {
+  margin-right: 2%;
+  margin-left: 2%;
+}
+
+table {
+margin: auto;
+width: 90%;
+align-items: center;
+}
