--- a/css/materialize.css
+++ b/css/materialize.css
@@ -4743,17 +4743,18 @@ small {
 .card {
   position: relative;
   margin: 0.5rem 0 1rem 0;
-  background-color: #fff;
+  background-color: #ffeee8;
   -webkit-transition: -webkit-box-shadow .25s;
   transition: -webkit-box-shadow .25s;
   transition: box-shadow .25s;
   transition: box-shadow .25s, -webkit-box-shadow .25s;
-  border-radius: 2px;
+  border-radius: 5px;
+  padding: 24px;
 }
 
 .card .card-title {
   font-size: 24px;
-  font-weight: 300;
+  font-weight: bolder;
 }
 
 .card .card-title.activator {
@@ -5167,6 +5168,7 @@ small {
   border-radius: 2px;
   display: inline-block;
   height: 36px;
+  width: 100%;
   line-height: 36px;
   padding: 0 16px;
   text-transform: uppercase;
@@ -5493,8 +5495,8 @@ button.btn-floating {
 .btn-flat {
   -webkit-box-shadow: none;
           box-shadow: none;
-  background-color: transparent;
-  color: #343434;
+  background-color: #26a69a;
+  color: white;
   cursor: pointer;
   -webkit-transition: background-color .2s;
   transition: background-color .2s;
@@ -5584,7 +5586,9 @@ button.btn-floating {
 }
 
 .dropdown-content li > a, .dropdown-content li > span {
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: bolder;
+  text-align: center;
   color: #26a69a;
   display: block;
   line-height: 22px;
@@ -5752,7 +5756,7 @@ body.keyboard-focused .dropdown-content li:focus {
   position: fixed;
   left: 0;
   right: 0;
-  background-color: #fafafa;
+  background-color: #ffeee8;
   padding: 0;
   max-height: 80%;
   width: 55%;
@@ -7168,9 +7172,10 @@ select {
   border-bottom: 1px solid #9e9e9e;
   outline: none;
   height: 3rem;
+  text-align: center;
   line-height: 3rem;
-  width: 100%;
-  font-size: 16px;
+  width: 50%;
+  font-size: 25px;
   margin: 0 0 8px 0;
   padding: 0;
   display: block;
@@ -7187,7 +7192,7 @@ select {
 
 .select-wrapper .caret {
   position: absolute;
-  right: 0;
+  right: 50%;
   top: 0;
   bottom: 0;
   margin: auto 0;
