--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #efebe9;
+}
+
+a {
+  color: #bcaaa4;
 }
 
 footer {
@@ -27,21 +32,16 @@ p {
   line-height: 2rem;
 }
 
-.sidenav-trigger {
-  color: #26a69a;
-}
-
 .parallax-container {
   min-height: 380px;
   line-height: 0;
   height: auto;
-  color: rgba(255,255,255,.9);
 }
-  .parallax-container .section {
-    width: 100%;
-  }
+.parallax-container .section {
+  width: 100%;
+}
 
-@media only screen and (max-width : 992px) {
+@media only screen and (max-width: 992px) {
   .parallax-container .section {
     position: absolute;
     top: 40%;
@@ -51,7 +51,7 @@ p {
   }
 }
 
-@media only screen and (max-width : 600px) {
+@media only screen and (max-width: 600px) {
   #index-banner .section {
     top: 0;
   }
@@ -70,9 +70,9 @@ p {
 }
 
 table {
-margin: auto;
-width: 90%;
-align-items: center;
+  margin: auto;
+  width: 90%;
+  align-items: center;
 }
 
 .resourceItems {
